<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:fitsSystemWindows="true"
    tools:context=".screens.SavedProjectsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sensors_header_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/spacing_screen"
            android:paddingEnd="@dimen/spacing_screen">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_save"
                app:tint="@color/accent_blue" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_card"
                android:layout_marginEnd="@dimen/spacing_card"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.UNO.ScreenTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saved_projects_title" />

                <TextView
                    style="@style/TextAppearance.UNO.Body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/saved_projects_subtitle" />

            </LinearLayout>

            <ImageView
                android:id="@+id/savedProjectsClose"
                style="@style/Widget.UNO.IconButton.Large"
                android:contentDescription="@string/saved_projects_close"
                android:src="@drawable/ic_close"
                app:tint="@color/text_secondary_dark" />

        </LinearLayout>

        <View style="@style/Widget.UNO.Divider" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/savedProjectsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:contentDescription="@string/saved_projects_list_description"
                android:padding="@dimen/spacing_card"
                android:scrollbars="vertical"
                tools:itemCount="4"
                tools:listitem="@layout/item_project_card" />

            <TextView
                android:id="@+id/savedProjectsEmpty"
                style="@style/TextAppearance.UNO.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="@dimen/spacing_large"
                android:paddingEnd="@dimen/spacing_large"
                android:text="@string/saved_projects_empty"
                android:visibility="gone"
                tools:visibility="visible" />

        </FrameLayout>

    </LinearLayout>

</FrameLayout>
