<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".screens.fragments.MobileCodeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sensors_header_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/spacing_screen"
            android:paddingEnd="@dimen/spacing_screen">

            <ImageView
                android:id="@+id/mobileCodeIcon"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_code" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_card"
                android:layout_marginEnd="@dimen/spacing_card"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mobileCodeTitle"
                    style="@style/TextAppearance.UNO.ScreenTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/mobile_code_title" />

                <TextView
                    android:id="@+id/mobileCodeSubtitle"
                    style="@style/TextAppearance.UNO.Body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/mobile_code_subtitle" />

            </LinearLayout>

            <ImageView
                android:id="@+id/saveProjectButton"
                style="@style/Widget.UNO.IconButton.Large"
                android:contentDescription="@string/mobile_code_save"
                android:src="@drawable/ic_save"
                app:tint="@color/accent_yellow" />

        </LinearLayout>

        <View style="@style/Widget.UNO.Divider" />

        <FrameLayout
            android:id="@+id/canvasContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.kgjr.uno.screens.fragments.codeHelper.canvas.CodeCanvasView
                android:id="@+id/code_canvas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_light" />

            <com.kgjr.uno.screens.fragments.dataHelper.canvas.DataCanvasView
                android:id="@+id/data_canvas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <!-- Icon rail docked to the right edge; more canvases get another button here. -->
            <LinearLayout
                android:id="@+id/canvasModeRail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginBottom="@dimen/canvas_rail_lift"
                android:background="@drawable/bg_canvas_rail"
                android:elevation="@dimen/elevation_fab"
                android:orientation="vertical"
                android:padding="@dimen/canvas_rail_padding">

                <ImageView
                    android:id="@+id/railFlowButton"
                    android:layout_width="@dimen/canvas_rail_item"
                    android:layout_height="@dimen/canvas_rail_item"
                    android:background="@drawable/bg_canvas_rail_item"
                    android:clickable="true"
                    android:contentDescription="@string/rail_flow"
                    android:focusable="true"
                    android:padding="@dimen/canvas_rail_item_padding"
                    android:src="@drawable/ic_flow_tree"
                    app:tint="@color/accent_yellow" />

                <ImageView
                    android:id="@+id/railDataButton"
                    android:layout_width="@dimen/canvas_rail_item"
                    android:layout_height="@dimen/canvas_rail_item"
                    android:layout_marginTop="@dimen/canvas_rail_gap"
                    android:background="@drawable/bg_canvas_rail_item"
                    android:clickable="true"
                    android:contentDescription="@string/rail_data"
                    android:focusable="true"
                    android:padding="@dimen/canvas_rail_item_padding"
                    android:src="@drawable/ic_data_chart"
                    app:tint="@color/text_secondary_dark" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nextScreenButton"
        style="@style/Widget.UNO.Fab"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/mobile_code_next"
        android:src="@drawable/ic_arrow_forward" />

</FrameLayout>
